// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubtractionToolbar /> > should not render create button when [canModify=false] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    placeholder="Name"
    value=""
  />
</Toolbar>
`;

exports[`<SubtractionToolbar /> > should render create button when [canModify=true] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    placeholder="Name"
    value=""
  />
  <LinkButton
    color="blue"
    icon="plus-square"
    tip="Create"
    to="subtractions/create"
  />
</Toolbar>
`;
